[gd_scene load_steps=98 format=3 uid="uid://cw8ndyn7x0jtw"]

[ext_resource type="Script" uid="uid://cvy30p7sflfno" path="res://Scripts/PlayerScripts/player.gd" id="1_5ixxa"]
[ext_resource type="Texture2D" uid="uid://bc3laxu8x482i" path="res://Assets/Player/Sprites/JoffryCrouch (2).png" id="2_1e7my"]
[ext_resource type="Resource" uid="uid://cgan3uvg81icq" path="res://inventory/playersinventory.tres" id="2_lslt6"]
[ext_resource type="Texture2D" uid="uid://dllb3gjjateqw" path="res://Assets/Player/Sprites/JoffryJump.png" id="2_megsn"]
[ext_resource type="Texture2D" uid="uid://dgmyl1seqyt2p" path="res://Assets/Player/Sprites/JoffryIdle.png" id="2_nn08x"]
[ext_resource type="Script" uid="uid://8ve325f45f84" path="res://Scenes/components/health.gd" id="3_1iu4k"]
[ext_resource type="Texture2D" uid="uid://qgdj63xbeisn" path="res://Assets/Player/Sprites/JoffryDamage (2).png" id="3_arntx"]
[ext_resource type="Texture2D" uid="uid://8oyhxe08n1o0" path="res://Assets/Player/Sprites/JoffryFlip.png" id="3_glx4g"]
[ext_resource type="Texture2D" uid="uid://dt77rlp4tfqmk" path="res://Assets/Player/Sprites/JoffryHit.png" id="3_ksbbd"]
[ext_resource type="PackedScene" uid="uid://bm4xhicqjh61w" path="res://Scenes/components/gravity_component.tscn" id="4_bhhdu"]
[ext_resource type="PackedScene" uid="uid://dicbkbifrpgwv" path="res://Scenes/components/input_component.tscn" id="5_megsn"]
[ext_resource type="Texture2D" uid="uid://bow711mpp0g0r" path="res://Assets/Player/Sprites/Joffry Dead.png" id="6_7sds5"]
[ext_resource type="PackedScene" uid="uid://ckvpt8j1lt1ix" path="res://Scenes/components/movement_component.tscn" id="6_nn08x"]
[ext_resource type="PackedScene" uid="uid://baruov8j3d7sq" path="res://Scenes/components/animation_component.tscn" id="7_bhhdu"]
[ext_resource type="PackedScene" uid="uid://qa2qwvr2lygv" path="res://Scenes/components/jump_component.tscn" id="8_megsn"]
[ext_resource type="Texture2D" uid="uid://fwc4txtp50sh" path="res://Assets/Player/Sprites/JoffryRunn.png" id="10_7sds5"]
[ext_resource type="Texture2D" uid="uid://b7c7vsrydnmqv" path="res://Assets/Player/Sprites/JoffrySprint-sheet.png" id="11_m0x7a"]
[ext_resource type="PackedScene" uid="uid://cujambhcsib8j" path="res://inventory/inv_ui.tscn" id="17_ulo2v"]
[ext_resource type="PackedScene" uid="uid://c4eh1plbrqgrr" path="res://Scenes/PlayerStuff/health_bar_ui.tscn" id="18_ulo2v"]
[ext_resource type="PackedScene" uid="uid://oovqj0nitxs8" path="res://Scenes/hotbar.tscn" id="22_akloy"]
[ext_resource type="Texture2D" uid="uid://bcguulefrsosq" path="res://Assets/Particles/leaf-sheet.png" id="23_26vv6"]
[ext_resource type="Script" uid="uid://bf54ry7gp7hsc" path="res://Scripts/PlayerScripts/grapple_controller.gd" id="23_cyioo"]
[ext_resource type="PackedScene" uid="uid://devfcw0o6bxon" path="res://Surprise/Scenes/high_level_ui.tscn" id="23_omk4i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rxg2u"]
atlas = ExtResource("2_1e7my")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xixlo"]
atlas = ExtResource("2_1e7my")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbt0"]
atlas = ExtResource("2_1e7my")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wosd6"]
atlas = ExtResource("2_1e7my")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrn1"]
atlas = ExtResource("2_1e7my")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqna"]
atlas = ExtResource("3_arntx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00okb"]
atlas = ExtResource("3_arntx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypvrw"]
atlas = ExtResource("6_7sds5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnvir"]
atlas = ExtResource("6_7sds5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrfq8"]
atlas = ExtResource("6_7sds5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq54w"]
atlas = ExtResource("6_7sds5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("3_glx4g")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("3_glx4g")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("3_glx4g")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("3_glx4g")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("3_glx4g")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("3_glx4g")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("3_glx4g")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("2_megsn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("3_ksbbd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("3_ksbbd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("3_ksbbd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("3_ksbbd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("3_ksbbd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("3_ksbbd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("3_ksbbd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("3_ksbbd")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("3_arntx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("3_arntx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwiga"]
atlas = ExtResource("2_nn08x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nwty"]
atlas = ExtResource("2_nn08x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuggy"]
atlas = ExtResource("2_nn08x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr25n"]
atlas = ExtResource("2_nn08x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("2_megsn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("2_megsn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("2_megsn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_akloy"]
atlas = ExtResource("10_7sds5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyioo"]
atlas = ExtResource("10_7sds5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26vv6"]
atlas = ExtResource("10_7sds5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_omk4i"]
atlas = ExtResource("10_7sds5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3y2e"]
atlas = ExtResource("10_7sds5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_upcfq"]
atlas = ExtResource("10_7sds5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlx4o"]
atlas = ExtResource("10_7sds5")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u25h1"]
atlas = ExtResource("10_7sds5")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("11_m0x7a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpo1r"]
atlas = ExtResource("11_m0x7a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqity"]
atlas = ExtResource("11_m0x7a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr71"]
atlas = ExtResource("11_m0x7a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6y60"]
atlas = ExtResource("11_m0x7a")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmcrb"]
atlas = ExtResource("11_m0x7a")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_teras"]
atlas = ExtResource("11_m0x7a")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p516"]
atlas = ExtResource("11_m0x7a")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_25his"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxg2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xixlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wosd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrn1")
}],
"loop": false,
"name": &"Crouch",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opqna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00okb")
}],
"loop": true,
"name": &"Damage",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypvrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnvir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrfq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq54w")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}],
"loop": false,
"name": &"Dodge",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}],
"loop": false,
"name": &"Hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}],
"loop": true,
"name": &"Hurt",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwiga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nwty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuggy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr25n")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_akloy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyioo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26vv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omk4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3y2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upcfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlx4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u25h1")
}],
"loop": true,
"name": &"Run",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpo1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6y60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmcrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teras")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p516")
}],
"loop": true,
"name": &"Sprint",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ye8ic"]
radius = 4.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ksbbd"]
radius = 5.0
height = 24.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_omk4i"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_b3y2e"]
offsets = PackedFloat32Array(0, 0.162252, 0.89404, 0.990066)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.639216)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7nbq1"]
gradient = SubResource("Gradient_b3y2e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_upcfq"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(500, 50, 1)
spread = 20.0
initial_velocity_min = 20.0
initial_velocity_max = 80.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 50.0
gravity = Vector3(0, 10, 0)
scale_min = 0.1
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_7nbq1")
anim_offset_max = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xlx4o"]

[sub_resource type="Gradient" id="Gradient_u25h1"]
offsets = PackedFloat32Array(0, 0.490066, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vm72l"]
gradient = SubResource("Gradient_u25h1")

[sub_resource type="Curve" id="Curve_wnvir"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.597205), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fkdbe"]
curve = SubResource("Curve_wnvir")

[sub_resource type="Curve" id="Curve_nrfq8"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.10061, 35.723), 0.0, 0.0, 0, 0, Vector2(0.189024, -55.8931), 0.0, 0.0, 0, 0, Vector2(0.317073, 48.3597), 0.0, 0.0, 0, 0, Vector2(0.487805, -59.0522), 0.0, 0.0, 0, 0, Vector2(0.618902, 54.678), 0.0, 0.0, 0, 0, Vector2(0.710366, -43.2563), 0.0, 0.0, 0, 0, Vector2(0.829268, 60.9964), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 9

[sub_resource type="CurveTexture" id="CurveTexture_mg4q0"]
curve = SubResource("Curve_nrfq8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_eq54w"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(2, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(100, 100, 1)
angle_min = -19.7
angle_max = -19.7
spread = 47.189
gravity = Vector3(100, 20, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 18.7
tangential_accel_curve = SubResource("CurveTexture_mg4q0")
damping_max = 9.938
scale_min = 0.5
scale_max = 1.8
scale_curve = SubResource("CurveTexture_fkdbe")
color_ramp = SubResource("GradientTexture1D_vm72l")
sub_emitter_keep_velocity = true

[sub_resource type="Gradient" id="Gradient_ypvrw"]
offsets = PackedFloat32Array(0, 0.549669, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.0664472, 0, 0.724641, 1, 0.741877, 0.211379, 0.151097, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8m3t6"]
gradient = SubResource("Gradient_ypvrw")

[sub_resource type="Gradient" id="Gradient_j5up5"]
offsets = PackedFloat32Array(0, 0.513245, 1)
colors = PackedColorArray(0.794437, 0, 0, 1, 1, 1, 1, 1, 0.332852, 0.133627, 0.401717, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mucmn"]
gradient = SubResource("Gradient_j5up5")

[sub_resource type="Curve" id="Curve_8gp8b"]
_data = [Vector2(0, 0.154921), 0.0, 0.0, 0, 0, Vector2(0.143293, 0.699878), 0.0, 0.0, 0, 0, Vector2(0.307927, 0.265492), 0.0, 0.0, 0, 0, Vector2(0.5, 0.739368), 0.0, 0.0, 0, 0, Vector2(0.603658, 0.249696), 0.0, 0.0, 0, 0, Vector2(0.743902, 0.597205), 0.0, 0.0, 0, 0, Vector2(0.875, 0.849939), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 8

[sub_resource type="CurveTexture" id="CurveTexture_ese38"]
curve = SubResource("Curve_8gp8b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fcr56"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(200, 200, 1)
gravity = Vector3(900, 10, 0)
tangential_accel_min = -9.94
tangential_accel_max = 28.57
scale_min = 0.0
scale_max = 18.66
scale_curve = SubResource("CurveTexture_ese38")
color = Color(0.796148, 0.490433, 0.821552, 1)
color_ramp = SubResource("GradientTexture1D_mucmn")
color_initial_ramp = SubResource("GradientTexture1D_8m3t6")

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "animation_component", "jump_component") groups=["Player"]]
collision_layer = 3
collision_mask = 515
script = ExtResource("1_5ixxa")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
jump_component = NodePath("JumpComponent")
inv = ExtResource("2_lslt6")

[node name="Health" type="Node" parent="."]
script = ExtResource("3_1iu4k")
max_health = 100
metadata/_custom_type_script = "uid://8ve325f45f84"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_25his")
animation = &"Sprint"
frame_progress = 0.885933

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_ye8ic")
debug_color = Color(0, 0.636074, 0.409419, 0.42)

[node name="EnemyDetector" type="Area2D" parent="." groups=["Player"]]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_ksbbd")
debug_color = Color(0.980392, 0, 0, 0.419608)

[node name="GravityComponent" parent="." instance=ExtResource("4_bhhdu")]

[node name="InputComponent" parent="." instance=ExtResource("5_megsn")]

[node name="MovementComponent" parent="." instance=ExtResource("6_nn08x")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("7_bhhdu")]
sprite = NodePath("../AnimatedSprite2D")

[node name="JumpComponent" parent="." instance=ExtResource("8_megsn")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -67)
zoom = Vector2(1.5, 1.5)

[node name="Label" type="Label" parent="Camera2D"]
visible = false
offset_left = -38.0
offset_top = -12.0
offset_right = 43.0
offset_bottom = 11.0
text = "Your Dead"

[node name="Inv_UI" parent="." instance=ExtResource("17_ulo2v")]
z_index = 4
offset_left = -46.0
offset_top = -80.0
offset_right = -46.0
offset_bottom = -80.0

[node name="HealthBarUI" parent="." instance=ExtResource("18_ulo2v")]
offset_left = -414.0
offset_top = -297.0
offset_right = -331.0
offset_bottom = -277.0

[node name="FootstepPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
pitch_scale = 1.1

[node name="PlayerNoises" type="AudioStreamPlayer2D" parent="."]
volume_db = -7.634
pitch_scale = 2.17

[node name="GrappleController" type="Node2D" parent="."]
script = ExtResource("23_cyioo")

[node name="RayCast2D" type="RayCast2D" parent="GrappleController"]
target_position = Vector2(1200, 0)

[node name="Line2D" type="Line2D" parent="GrappleController"]

[node name="Leaves" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_omk4i")
position = Vector2(-162, -60)
amount = 20
texture = ExtResource("23_26vv6")
visibility_rect = Rect2(-150, -100, 640, 180)
process_material = SubResource("ParticleProcessMaterial_upcfq")

[node name="WindTrails" type="GPUParticles2D" parent="."]
physics_interpolation_mode = 1
texture_filter = 1
material = SubResource("CanvasItemMaterial_xlx4o")
position = Vector2(0, -48)
amount = 16
lifetime = 0.83
trail_enabled = true
trail_lifetime = 1.39
process_material = SubResource("ParticleProcessMaterial_eq54w")

[node name="Kami" type="GPUParticles2D" parent="."]
z_index = 3
emitting = false
amount = 30
trail_enabled = true
trail_lifetime = 0.51
process_material = SubResource("ParticleProcessMaterial_fcr56")

[node name="Hotbar" parent="." instance=ExtResource("22_akloy")]
offset_left = -89.0
offset_top = 65.0
offset_right = 675.0
offset_bottom = 765.0
scale = Vector2(0.25, 0.25)

[node name="HighLevelUI" parent="." instance=ExtResource("23_omk4i")]
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
grow_horizontal = 1

[editable path="HealthBarUI"]
